# RustWasmGameTest

./: .gitignore  Cargo.toml  Readme.MD  serve.sh  webglbuild.bat  webglbuild.sh  webglrun.sh
resources/fake_saves/: save1.json
src/: main.rs
src/assets/: player.rs
src/components/: collider.rs  has_velocity.rs  left_mover.rs  mod.rs  player.rs  position.rs  velocity.rs
src/entities/: mod.rs  player.rs
src/functions/: map.rs
src/resources/: mod.rs
src/systems/: left_walker.rs  mod.rs  save_load_game.rs  velocity_movement.rs
wasm_help/: index.html
wasm_help/staging/: brackets-web-test.js  brackets-web-test_bg.wasm
