[package]
name = "brackets-web-test"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
bracket-terminal = { git = "https://github.com/amethyst/bracket-lib.git" }
legion = { version = "0.3.1", default-features = false, features = ["wasm-bindgen"] }
lazy_static = "1.4.0"
web-time = "1.0.0"
specs = {version = "0.20.0", features = ["derive", "serde"]} 
serde_json = "1.0.113"
serde = "1.0.196"




[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.68", features = ["Storage"] }
